--- a/public/index.html
+++ b/public/index.html
@@ -4,15 +4,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>davidacevedo.me</title>
-  <script src="https://vuejs.org/js/vue.js"></script>
   
 </head>
 <body>
-  <div id="root">
-    {{message}}
-    <todo-item></todo-item>
-  </div>
+  <div id="root"></div>
+  <script src="bundle.js"></script>
 </body>
-<script src="bundle.js"></script>
 
 </html>
